--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
 }
-/* --------------------------------------------------HEADER---------------------------------------------------- */
+
 .head {
   width: 100%;
   height: 100vh;
@@ -129,12 +129,12 @@ nav {
   transition: 300ms;
   cursor: pointer;
 }
-/* --------------------------------------------------MAIN------------------------------------------------------ */
+
 main {
   width:auto;
   height:auto;
 }
-/* --------------------------------------------------DOMAIN---------------------------------------------------- */
+
 .wrap-table {
   height: 578px;
   text-align: center;  
@@ -282,7 +282,7 @@ main {
 .box-table::after {
   left: 232px;
 }
-/* -----------------------------------------------------HOSTING-BACKGROUND------------------------------------------------- */
+
 .hosting {
   display: flex;  
   justify-content: center;
@@ -293,7 +293,7 @@ main {
   background-position:  0 -220px;
   background-size: cover; 
 }
-/* -------------------------------------------------------DIAGRAMS--------------------------------------------- */
+
  .data-diagr {   
   position: absolute;
   z-index: 1;
@@ -452,7 +452,8 @@ article .numbers p {
   text-align: center;
   font-family: "Lato-Semibold", "Lato-Bold", "MyriadPro-Regular";
   color: rgba(40, 40, 40, 255);
-}/* ---------------------------------------------------ABOUT-US--------------------------------------------------- */
+}
+
 .about-us {
   display: flex;
   align-items: center;
@@ -546,7 +547,7 @@ article .numbers p {
   box-shadow: -1.6px 1.6px  rgba(0,0,0,0.6);  
   transform: scale(1.5);
 }
-/* ----------------------------------------------SLIDER----------------------------------------------------- */
+
 .slideshow-container {
   position: relative;
   display: flex;
@@ -629,7 +630,7 @@ article .numbers p {
   from {opacity: .4} 
   to {opacity: 1}
 }
-/* --------------------------------------------ITEMS--------------------------------------------------- */
+
 .items {
   display: flex;
   justify-content: center;
@@ -683,7 +684,7 @@ article .numbers p {
 .items-container a:hover {
   transform: scale(1.2);
 }
-/* ---------------------------------------------FOOTER------------------------------------------- */
+
 footer {
   width: auto;
   height:294px;
